--- a/ballerina-tests/fail-safe-mechanism/Dependencies.toml
+++ b/ballerina-tests/fail-safe-mechanism/Dependencies.toml
@@ -26,11 +26,27 @@ name = "fail_safe_mechanism"
 version = "0.9.0"
 dependencies = [
 	{org = "ballerina", name = "data.csv"},
+	{org = "ballerina", name = "file"},
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "test"}
 ]
 modules = [
 	{org = "ballerina", packageName = "fail_safe_mechanism", moduleName = "fail_safe_mechanism"}
+]
+
+[[package]]
+org = "ballerina"
+name = "file"
+version = "1.12.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "os"},
+	{org = "ballerina", name = "time"}
+]
+modules = [
+	{org = "ballerina", packageName = "file", moduleName = "file"}
 ]
 
 [[package]]
@@ -111,9 +127,19 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "observe"
-version = "1.5.1"
+version = "1.6.0"
 scope = "testOnly"
 dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
+name = "os"
+version = "1.10.1"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"}
 ]
 
@@ -129,5 +155,14 @@ dependencies = [
 ]
 modules = [
 	{org = "ballerina", packageName = "test", moduleName = "test"}
+]
+
+[[package]]
+org = "ballerina"
+name = "time"
+version = "2.7.0"
+scope = "testOnly"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
 ]
 
